fix issue with wrapping tiles on hover

--- a/Blazor-Color-Picker-Library/wwwroot/colorpicker.css
+++ b/Blazor-Color-Picker-Library/wwwroot/colorpicker.css
@@ -53,6 +53,8 @@
 }
 
     .color-picker-case:hover {
+        width: 30px;
+        height: 30px;
         border: 1px solid #FFF;
         cursor: pointer;
     }
